{
    "name": "CharacterControlActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "a4a889bf-96b5-47ef-87f8-d898c7346da7",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "1232ac63-8d12-4ae1-9f28-70dc79f42a83",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6b5aa1f6-f6a9-4772-9dcd-325d1ed361a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "LookDirection",
                    "type": "PassThrough",
                    "id": "092a51f4-d624-4e2d-a849-c77ffd2abfc7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunToggle",
                    "type": "PassThrough",
                    "id": "70675deb-0faf-4078-8786-0a5e58f54d76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "CrouchToggle",
                    "type": "PassThrough",
                    "id": "c7fc4f32-8dc5-4fab-b504-887238d62cf0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "AttackToggle",
                    "type": "PassThrough",
                    "id": "e50f14da-f340-4b98-b619-3bfa636348a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Defend",
                    "type": "PassThrough",
                    "id": "fc5255c5-be14-44ba-9631-9b2457ebeebe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "Direction",
                    "id": "b391bdd8-b1b4-4add-910f-aa235a304639",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "62ec02a5-c293-468f-9734-749de8fed3eb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cc808905-97e2-4cde-a509-3eef2cee00ec",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7bdb12cb-18bc-45d8-a46c-bc2e995cabb8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c9b427d3-40e3-4d21-83ec-dc2d0b45d8f3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c2728815-cefd-4eb0-8fff-201a331babe1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83c4f222-b234-4044-a84d-76fd58c499c5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c49d1bfb-5e19-4437-bef8-a7cd44a2b07f",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80d23a4b-4762-43b3-8501-2bd29e19c40d",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CrouchToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ba4a7a5-5ca4-4398-824b-23104bb01a3b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb2b3c74-6805-40b8-9e81-e703ee273a48",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Defend",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}